tests/ui/skip_generic.stderr
error[E0599]: no method named `g` found for reference `&dyn Dyn` in the current scope
  --> tests/ui/skip_generic.rs:20:7
   |
20 |     d.g(1u8);
   |       ^ method not found in `&dyn Dyn`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Src` defines an item `g`, perhaps you need to implement it
  --> tests/ui/skip_generic.rs:4:1
   |
 4 | trait Src {
   | ^^^^^^^^^
